# PhysEn

./: .doxygen-config  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  tests.cpp
.github/workflows/: cmake.yml  codeql-analysis.yml  documentation.yml
cmake/: CompilerWarnings.cmake  CustomCommands.cmake  Doxygen.cmake  ProjectSettings.cmake
docs/: build.md  documentation.md
examples/: CMakeLists.txt  Rocket.cpp  rocket.cpp
examples/rocket/: rocket.cpp
lib/: CMakeLists.txt  CircleObject.cpp  CircleObject.hpp  FetchLibraries.cmake  Matrix.cpp  Matrix.hpp  Object.cpp  Object.hpp  Size.cpp  Size.hpp  Vector.cpp  Vector.hpp
scripts/: build.sh  install.sh  settings.sh
src/: CMakeLists.txt  CircleObject.cpp  Constants.hpp  CustomCommands.cmake  Object.cpp  Object.hpp  constants.hpp  main.cpp
src/Common/: CMakeLists.txt
src/Maths/: CMakeLists.txt  Complex.cpp  Complex.hpp  Integration.cpp  Integration.hpp  Matrix.cpp  Matrix.hpp  MatrixSolver.cpp  MatrixSolver.hpp  Statistics.cpp  Statistics.hpp  Vector.cpp  Vector.hpp
src/Parser/: CMakeLists.txt  LexMessages.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Token.hpp  Tree.cpp  Tree.hpp  Type.cpp  Type.hpp
src/Physics/: CMakeLists.txt  Circle.cpp  Circle.hpp  Object.cpp  Object.hpp  Optics.cpp  Optics.hpp  Rectangle.cpp  Rectangle.hpp
src/common/: CMakeLists.txt  Files.cmake  Size.cpp  Size.hpp  constants.hpp  dimension.cpp  dimension.hpp  size.cpp  size.hpp
src/maths/: CMakeLists.txt  Complex.cpp  Complex.hpp  Files.cmake  Integration.cpp  Integration.hpp  Matrix.cpp  Matrix.hpp  MatrixSolver.cpp  MatrixSolver.hpp  Size.cpp  Size.hpp  Vector.cpp  Vector.hpp  complex.cpp  complex.hpp  integration.cpp  integration.hpp  matrix.cpp  matrix.hpp  matrixSolver.cpp  matrixSolver.hpp  value.cpp  value.hpp  vector.hpp
src/objects/: CMakeLists.txt  Circle.cpp  Circle.hpp  CircleObject.cpp  CircleObject.hpp  Object.cpp  Object.hpp  ObjectCircle.cpp  ObjectCircle.hpp  ObjectRectangle.cpp  ObjectRectangle.hpp  Rectangle.cpp  Rectangle.hpp
src/physics/: CMakeLists.txt  Files.cmake  circle.cpp  circle.hpp  object.cpp  object.hpp  operators.cpp  operators.hpp  optics.cpp  optics.hpp  rectangle.cpp  rectangle.hpp
tests/: CMakeLists.txt  Components.GTest.cpp  FetchGTest.cmake  Maths.GTest.cpp  Physics.GTest.cpp  main.gtest.cpp
tests/Common/: Size.GTest.cpp
tests/Maths/: Complex.GTest.cpp  Integration.GTest.cpp  Matrix.GTest.cpp  Vector.GTest.cpp
tests/Parser/: Lexer.GTest.cpp
tests/Physics/: Object.GTest.cpp  Optics.GTest.cpp
tests/common/: Files.cmake  Size.GTest.cpp  size.gtest.cpp
tests/maths/: Complex.GTest.cpp  Files.cmake  General.GTest.cpp  Integration.GTest.cpp  Matrix.GTest.cpp  Vector.GTest.cpp  complex.gtest.cpp  integration.gtest.cpp  matrix.gtest.cpp  vector.gtest.cpp
tests/physics/: Files.cmake  Object.GTest.cpp  object.gtest.cpp  optics.gtest.cpp
